# AegisDesk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/agent/: CMakeLists.txt  main.cpp
apps/agent/include/agent/: agent_api.h  http_server.h  metrics_collector.h  metrics_sampler.h  platform_metrics_reader.h  process_supervisor.h  procfs_reader.h  service_definition.h  service_metrics.h  service_registry.h
apps/agent/include/agent/alerts/: alert_evaluator.h  alert_event.h  alert_manager.h  alert_rule.h
apps/agent/include/agent/api/: agent_api.h  http_json.h  http_server.h
apps/agent/include/agent/health/: health_checker.h  health_monitor.h  health_status.h
apps/agent/include/agent/metrics/: metrics_collector.h  metrics_sampler.h  service_metrics.h
apps/agent/include/agent/recovery/: recovery_manager.h  recovery_policy.h
apps/agent/include/agent/service/: desired_state.h  log_reader.h  process_supervisor.h  service_definition.h  service_id.h  service_registry.h
apps/agent/src/: agent_api.cpp  http_json.cpp  http_server.cpp  linux_metrics_reader.cpp  log_reader.cpp  macos_metrics_reader.cpp  metrics_collector.cpp  metrics_sampler.cpp  process_supervisor.cpp  procfs_reader.cpp  service_registry.cpp  unsupported_metrics_reader.cpp
apps/agent/src/alerts/: alert_evaluator.cpp  alert_manager.cpp
apps/agent/src/api/: agent_api.cpp  bounded_request_executor.cpp  bounded_request_executor.h  http_json.cpp  http_server.cpp  http_session.cpp  http_session.h
apps/agent/src/health/: health_checker.cpp  health_monitor.cpp
apps/agent/src/metrics/: linux_metrics_reader.cpp  macos_metrics_reader.cpp  metrics_collector.cpp  metrics_sampler.cpp  unsupported_metrics_reader.cpp
apps/agent/src/recovery/: recovery_manager.cpp
apps/agent/src/service/: log_reader.cpp  process_supervisor.cpp  service_registry.cpp
apps/demo_service/: CMakeLists.txt  main.cpp
apps/desktop/: CMakeLists.txt
apps/desktop/include/desktop/: agent_client.h  main_window.h  metric_chart_widget.h  metrics_history_panel.h
apps/desktop/include/desktop/api/: agent_client.h
apps/desktop/include/desktop/common/: ui_helpers.h
apps/desktop/include/desktop/widgets/: main_window.h  metric_chart_widget.h  metrics_history_panel.h  service_health_panel.h
apps/desktop/src/: agent_client.cpp  main.cpp  main_window.cpp  metric_chart_widget.cpp  metrics_history_panel.cpp
apps/desktop/src/api/: agent_client.cpp
apps/desktop/src/common/: ui_helpers.cpp
apps/desktop/src/widgets/: main_window.cpp  metric_chart_widget.cpp  metrics_history_panel.cpp  service_health_panel.cpp
configs/: services.json
docs/: api.md  architecture.md  http-server-lifecycle.md  http-server-performance-baseline.md  http-server-performance-report.md  state-machine.md
tests/: CMakeLists.txt
tests/fixtures/: fault_process.cpp
tests/integration/: http_server_baseline_test.cpp  http_server_resilience_test.cpp
tests/performance/: http_benchmark_main.cpp  http_benchmark_runner.cpp  http_benchmark_runner.h  http_server_performance_test.cpp
tests/support/: test_builders.h
tests/unit/: agent_api_concurrency_test.cpp  agent_api_status_test.cpp  health_checker_test.cpp  model_validation_test.cpp  process_supervisor_state_test.cpp  recovery_manager_test.cpp
